# artos

./: .gitignore  CHANGELOG.md  README.md  fetch_synset_wordlist.py  index.html  launch-gui.py
PyARTOS/: __init__.py  artos_wrapper.py  config.py  detecting.py  imagenet.py  learning.py  utils.py
PyARTOS/Camera/: Capture.py  CvCapture.py  PygameCapture.py  WinCapture.py  __init__.py
PyARTOS/GUI/: AnnotationDialog.py  BatchWindow.py  CameraSampler.py  CameraWindow.py  Evaluation.py  MainFrame.py  ModelCatalogue.py  SetupDialog.py  __init__.py  gui_utils.py
cmake/: CheckSSEFeatures.cmake
docs/PyARTOS/html/: ____init_____8py.html  ____init_____8py.js  _annotation_dialog_8py.html  _batch_window_8py.html  _camera_2____init_____8py.html  _camera_sampler_8py.html  _camera_window_8py.html  _capture_8py.html  _cv_capture_8py.html  _evaluation_8py.html  _evaluation_8py.js  _g_u_i_2____init_____8py.html  _g_u_i_2____init_____8py.js  _main_frame_8py.html  _model_catalogue_8py.html  _pygame_capture_8py.html  _setup_dialog_8py.html  _setup_dialog_8py.js  _win_capture_8py.html  annotated.html  annotated.js  artos__wrapper_8py.html  artos__wrapper_8py.js  class_py_a_r_t_o_s_1_1_camera_1_1_cv_capture_1_1_capture-members.html  class_py_a_r_t_o_s_1_1_camera_1_1_cv_capture_1_1_capture.html  class_py_a_r_t_o_s_1_1_camera_1_1_cv_capture_1_1_capture.js  class_py_a_r_t_o_s_1_1_camera_1_1_cv_capture_1_1_capture__coll__graph.map  class_py_a_r_t_o_s_1_1_camera_1_1_cv_capture_1_1_capture__coll__graph.md5  class_py_a_r_t_o_s_1_1_camera_1_1_cv_capture_1_1_capture_aba830568e450267ae5c03b5e4182b784_cgraph.map  class_py_a_r_t_o_s_1_1_camera_1_1_cv_capture_1_1_capture_aba830568e450267ae5c03b5e4182b784_cgraph.md5  class_py_a_r_t_o_s_1_1_camera_1_1_pygame_capture_1_1_capture-members.html  class_py_a_r_t_o_s_1_1_camera_1_1_pygame_capture_1_1_capture.html  class_py_a_r_t_o_s_1_1_camera_1_1_pygame_capture_1_1_capture.js  class_py_a_r_t_o_s_1_1_camera_1_1_pygame_capture_1_1_capture__coll__graph.map  class_py_a_r_t_o_s_1_1_camera_1_1_pygame_capture_1_1_capture__coll__graph.md5  class_py_a_r_t_o_s_1_1_camera_1_1_pygame_capture_1_1_capture_ade77fc78c86d1bb60bbeff01220ce15c_cgraph.map  class_py_a_r_t_o_s_1_1_camera_1_1_pygame_capture_1_1_capture_ade77fc78c86d1bb60bbeff01220ce15c_cgraph.md5  class_py_a_r_t_o_s_1_1_camera_1_1_win_capture_1_1_capture-members.html  class_py_a_r_t_o_s_1_1_camera_1_1_win_capture_1_1_capture.html  class_py_a_r_t_o_s_1_1_camera_1_1_win_capture_1_1_capture.js  (+508 more)
docs/PyARTOS/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_5f.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_74.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+88 more)
docs/libartos/html/: _caffe_feature_extractor_8cc.html  _caffe_feature_extractor_8cc__incl.map  _caffe_feature_extractor_8cc__incl.md5  _caffe_feature_extractor_8h.html  _caffe_feature_extractor_8h__dep__incl.map  _caffe_feature_extractor_8h__dep__incl.md5  _caffe_feature_extractor_8h__incl.map  _caffe_feature_extractor_8h__incl.md5  _caffe_feature_extractor_8h_source.html  _d_p_m_detection_8cc.html  _d_p_m_detection_8cc__incl.map  _d_p_m_detection_8cc__incl.md5  _d_p_m_detection_8h.html  _d_p_m_detection_8h__dep__incl.map  _d_p_m_detection_8h__dep__incl.md5  _d_p_m_detection_8h__incl.map  _d_p_m_detection_8h__incl.md5  _d_p_m_detection_8h_source.html  _feature_extractor_8cc.html  _feature_extractor_8cc.js  _feature_extractor_8cc__incl.map  _feature_extractor_8cc__incl.md5  _feature_extractor_8h.html  _feature_extractor_8h.js  _feature_extractor_8h__dep__incl.map  _feature_extractor_8h__dep__incl.md5  _feature_extractor_8h__incl.map  _feature_extractor_8h__incl.md5  _feature_extractor_8h_source.html  _feature_matrix_8h.html  _feature_matrix_8h.js  _feature_matrix_8h__dep__incl.map  _feature_matrix_8h__dep__incl.md5  _feature_matrix_8h__incl.map  _feature_matrix_8h__incl.md5  _feature_matrix_8h_source.html  _feature_pyramid_8cc.html  _feature_pyramid_8cc__incl.map  _feature_pyramid_8cc__incl.md5  _feature_pyramid_8h.html  (+1177 more)
docs/libartos/html/search/: all_1.js  all_10.js  all_11.js  (+175 more)
src/: CMakeLists.txt  CaffeFeatureExtractor.cc  CaffeFeatureExtractor.h  DPMDetection.cc  DPMDetection.h  FeatureExtractor.cc  FeatureExtractor.h  FeatureMatrix.h  FeaturePyramid.cc  FeaturePyramid.h  HOGFeatureExtractor.cc  HOGFeatureExtractor.h  ImageNetModelLearner.cc  ImageNetModelLearner.h  Intersector.h  JPEGImage.cc  JPEGImage.h  Mixture.cc  Mixture.h  Model.cc  Model.h  ModelEvaluator.cc  ModelEvaluator.h  ModelLearner.cc  ModelLearner.h  ModelLearnerBase.cc  ModelLearnerBase.h  Object.cc  Object.h  Patchwork.cc  Patchwork.h  Random.cc  Random.h  Rectangle.cc  Rectangle.h  Scene.cc  Scene.h  StationaryBackground.cc  StationaryBackground.h  blf.cc  (+16 more)
src/ImageDirectories/: CMakeLists.txt  ImageRepository.cc  ImageRepository.h  Synset.h  SynsetImage.cc  SynsetImage.h  SynsetIterators.cc  SynsetIterators.h
src/ImageNet/: CMakeLists.txt  ImageRepository.cc  ImageRepository.h  Synset.h  SynsetImage.cc  SynsetImage.h  SynsetIterators.cc  SynsetIterators.h  TarExtractor.cc  TarExtractor.h
src/ffld/: CMakeLists.txt  HOGPyramid.cpp  HOGPyramid.h  INSTALL.txt  Intersector.h  JPEGImage.cpp  JPEGImage.h  Makefile  Mixture.cpp  Mixture.h  Model.cpp  Model.h  Object.cpp  Object.h  Patchwork.cpp  Patchwork.h  README.txt  Scene.cpp  Scene.h  cmake_install.cmake  ffld.cpp  timingtools.cpp  timingtools.h
src/ffld/erik/: CMakeLists.txt  convertmodel.m  convertmultiplemodels.m  convertmultiplewhomodels.m  convertwhoimagenet.m  convertwhomodel.m  createImageSet.sh  detect.cpp  detect_opencv.cpp  opencvToJPEGImage.h
stylesheets/: stylesheet.css
tools/: CMakeLists.txt  extract_hog.cc  extract_who.cc  learn_bg.cc  learn_cnn_pca.cc  learn_cnn_scales.cc  learn_model.cc  test_on_dir.cc  test_on_synset.cc
